add id for home button, createListeners now in bash-pwa so every route can access the function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
         <nav id="navbar">
             <ul>
-                <li><button type="button">Home</button></li>
+                <li><button type="button" id="home">Home</button></li>
                 <li><button type="button" id="logout">Logout</button></li>
             </ul>
         </nav>
